--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p>| 코드 |</p>
   <div class="coupon-code" id="coupon">로딩 중...</div>
   
-  <img src="https://davuni.github.io/ddgrm.github.io/images/logo.png" alt="똑똑꾸러밍 로고">
+  <img src="images/coupon.png" alt="똑똑꾸러밍 로고">
 
   <script>
     // 쿠폰 코드를 서버에서 받아오거나 랜덤으로 생성
