--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   <h1>10% 할인 쿠폰을 받으셨습니다</h1>
   <p>| 코드 |</p>
   <div class="coupon-code" id="coupon">로딩 중...</div>
-  
+  <p>| 유의사항 |</p>
+  <p>해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</p>
+
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
 
   <script>
