--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       color: #ff5722;
       margin-top: 20px;
     }
+    .danger {
+      font-size: 2rem;
+      color: darkgray;
+      margin-top: 20px;
+    }
     img {
       margin-top: 20px; /* 이미지 위에 간격 추가*/
       max-width: 200px; /* 이미지의 크기를 조정 */
@@ -38,8 +43,8 @@
   <p>| 코드 |</p>
   <div class="coupon-code" id="coupon">로딩 중...</div>
   <p>| 유의사항 |</p>
+  <div class="danger" id="info">로딩 중...</div>
   <p>해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</p>
-
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
 
   <script>
@@ -50,4 +55,3 @@
 
 </body>
 </html>
-
