--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       margin-top: 20px;
     }
     .danger {
-      font-size: 2rem;
       color: darkgray;
       margin-top: 20px;
     }
@@ -39,10 +38,10 @@
   </script>
 </head>
 <body>
-  <h1>10% 할인 쿠폰</h1>
+  <h1>10% 할인 쿠폰을 받으셨습니다</h1>
   <p>| 코드 |</p>
   <div class="coupon-code" id="coupon">로딩 중...</div>
-  
+
   <p>| 유의사항 |</p>
   <div class="danger" id="info">
     <p>해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</p>
