--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
   <div class="coupon-code" id="coupon">로딩 중...</div>
 
   <p>| 유의사항 |</p>
-  <div class="danger" id="info">
-    <p>해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</p>
-  </div>
+  <div class="danger" id="info">해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</div>
   
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
 
