--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
       margin-top: 20px;
     }
     img {
-      margin-top: 200px; /* 이미지 위에 간격 추가*/
+      margin-top: 100px; /* 이미지 위에 간격 추가*/
       max-width: 200px; /* 이미지의 크기를 조정 */
       height: auto;
       margin-bottom: 20px; /* 이미지 아래에 간격 추가 */
+    }
+    link {
+      font-size: 1.5rem;
+      color: #ff5722;
+      text-decoration: none; /* 밑줄 없애기 */
+    }
+    link:hover {
+      text-decoration: underline; /* 마우스 오버 시 밑줄 추가 */
     }
   </style>
 
@@ -44,7 +52,11 @@
 
   <p>| 유의사항 |</p>
   <div class="danger" id="info">해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</div>
-  
+
+  <p>
+    <link href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰</a>
+  </p>
+
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
 
   <script>
