--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       height: auto;
       margin-bottom: 20px; /* 이미지 아래에 간격 추가 */
     }
-    link {
+    a { /* 'link'에서 'a'로 수정 */
       font-size: 1.5rem;
       color: #ff5722;
       text-decoration: none; /* 밑줄 없애기 */
     }
-    link:hover {
+    a:hover { /* 'link'에서 'a'로 수정 */
       text-decoration: underline; /* 마우스 오버 시 밑줄 추가 */
     }
   </style>
@@ -54,7 +54,7 @@
   <div class="danger" id="info">해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</div>
 
   <p>
-    <link href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰</a>
+    <a href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰</a>
   </p>
 
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
