--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="danger" id="info">해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</div>
 
   <p>
-    <a href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰</a>
+    <a href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰 바로가기 ></a>
   </p>
 
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
