--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <h1>10% 할인 쿠폰</h1>
   <p>| 코드 |</p>
   <div class="coupon-code" id="coupon" onclick="copyCouponCode()">로딩 중...</div> <!-- 클릭 시 복사 함수 호출 -->
-  <p>쿠폰 클릭 시 복사됩니다.</p>
-  
+  <div class="danger" id="info">코드 클릭 시 복사됩니다.</div>
+
   <p>| 쿠폰 사용 방법 |</p>
   <p>마이페이지 → 쿠폰 → 쿠폰등록 클릭 후 번호 입력</p>
 
