--- a/index.html
+++ b/index.html
@@ -60,16 +60,19 @@
   <div class="coupon-code" id="coupon" onclick="copyCouponCode()">로딩 중...</div> <!-- 클릭 시 복사 함수 호출 -->
   <div class="danger" id="info">코드 클릭 시 복사됩니다.</div>
 
-  <p>| 쿠폰 사용 방법 |</p>
-  <p>마이페이지 → 쿠폰 → 쿠폰등록 클릭 후 번호 입력</p>
-
-  <p>| 유의사항 |</p>
-  <div class="danger" id="info">해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</div>
-
-  <p>
-    <a href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰 바로가기 ></a>
-  </p>
-
+  <div>
+    <p>| 쿠폰 사용 방법 |</p>
+    <p>마이페이지 → 쿠폰 → 쿠폰등록 클릭 후 번호 입력</p>
+  </div>
+  <div>
+    <p>| 유의사항 |</p>
+    <p>해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</p>
+  </div>
+  <div>
+    <p>
+      <a href="https://www.ddgrm.com/" target="_blank">똑똑꾸러밍 자사몰 바로가기 ></a>
+    </p>
+  </div>
   <img src="images/logo.png" alt="똑똑꾸러밍 로고">
 
   <script>
