--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       margin-bottom: 20px; /* 이미지 아래에 간격 추가 */
     }
     a { /* 'link'에서 'a'로 수정 */
-      font-size: 1.5rem;
+      font-size: 1.0rem;
       color: #ff5722;
       text-decoration: none; /* 밑줄 없애기 */
     }
@@ -61,12 +61,24 @@
   <div class="danger" id="info">코드 클릭 시 복사됩니다.</div>
 
   <div>
+    <p> </p>
     <p>| 쿠폰 사용 방법 |</p>
     <p>마이페이지 → 쿠폰 → 쿠폰등록 클릭 후 번호 입력</p>
   </div>
   <div>
+    <p> </p>
     <p>| 유의사항 |</p>
-    <p>해당 쿠폰은 똑똑꾸러밍 자사몰에서만 이용 가능합니다</p>
+    
+    <p>
+      - 해당 쿠폰은 똑똑꾸러밍 자사몰에서만 등록과 사용이 가능합니다.<br>
+      - 쿠폰은 마이페이지 메뉴의 혜택관리(쿠폰) 탭에서 등록 가능합니다.<br>
+      - 쿠폰 발급 이후 ‘30일’ 이내에 사용 가능합니다.<br>
+      - 발급 이후 기간 내 사용되지 않은 쿠폰은 자동 소멸됩니다.<br>
+      - 쿠폰은 결제 시 결제정보 탭에서 사용 가능합니다.<br>
+      - 해당 쿠폰은 8,000원 이상 결제 시 사용 가능합니다.(배송비 별도)<br>
+      - 기존에 보유하고 계신 쿠폰과 중복적용 불가합니다.<br>
+      - 쿠폰 등록, 적용이 되지 않는 경우 1:1 문의 부탁 드립니다.<br>
+    </p>
   </div>
   <div>
     <p>
