--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     a:hover { /* 'link'에서 'a'로 수정 */
       text-decoration: underline; /* 마우스 오버 시 밑줄 추가 */
     }
+    .left-align { /* 왼쪽 정렬을 위한 클래스 추가 */
+      text-align: left;
+      margin: 0 auto; /* 중앙 정렬 유지 */
+      max-width: 600px; /* 너비 조정 */
+    }
   </style>
 
   <!-- Google tag (gtag.js) -->
@@ -69,7 +74,7 @@
     <p> </p>
     <p>| 유의사항 |</p>
     
-    <p>
+    <p class="left-align"> <!--왼쪽 정렬-->
       - 해당 쿠폰은 똑똑꾸러밍 자사몰에서만 등록과 사용이 가능합니다.<br>
       - 쿠폰은 마이페이지 메뉴의 혜택관리(쿠폰) 탭에서 등록 가능합니다.<br>
       - 쿠폰 발급 이후 ‘30일’ 이내에 사용 가능합니다.<br>
