--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     }
     .danger {
       color: darkgray;
-      margin-top: 20px;
     }
     img {
-      margin-top: 100px; /* 이미지 위에 간격 추가*/
+      margin-top: 50px; /* 이미지 위에 간격 추가*/
       max-width: 200px; /* 이미지의 크기를 조정 */
       height: auto;
       margin-bottom: 20px; /* 이미지 아래에 간격 추가 */
@@ -35,8 +34,9 @@
     }
     .left-align { /* 왼쪽 정렬을 위한 클래스 추가 */
       text-align: left;
+      font-size: small;
       margin: 0 auto; /* 중앙 정렬 유지 */
-      max-width: 600px; /* 너비 조정 */
+      max-width: 350px; /* 너비 조정 */
     }
   </style>
 
@@ -66,12 +66,12 @@
   <div class="danger" id="info">코드 클릭 시 복사됩니다.</div>
 
   <div>
-    <p> </p>
+    <p><br></p>
     <p>| 쿠폰 사용 방법 |</p>
     <p>마이페이지 → 쿠폰 → 쿠폰등록 클릭 후 번호 입력</p>
   </div>
   <div>
-    <p> </p>
+    <p><br></p>
     <p>| 유의사항 |</p>
     
     <p class="left-align"> <!--왼쪽 정렬-->
