--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div>
     <p><br></p>
     <p>| 쿠폰 사용 방법 |</p>
-    <p>마이페이지 → 쿠폰 → 쿠폰등록 클릭 후 번호 입력</p>
+    <p><strong>마이페이지 → 쿠폰 → 쿠폰등록</strong> 클릭 후 코드 입력</p>
   </div>
   <div>
     <p><br></p>
